--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
       <button onclick="startFlash()" class="mode-btn" data-tooltip="シンプルなフラッシュ暗算モード">✨ Flash Mode</button>
     </div>
   </div>
-
+  
+  <div class="series-box">
+    <h3>Eden Series</h3>
+    <a href="https://furu622.github.io/Cal.-Eden_Next/" target="_blank">
+      🌺 Cal. Eden: Next 
+    </a>
+  </div>
 
 
   <!-- =======================================================
